--- a/src/data/lang/en.json
+++ b/src/data/lang/en.json
@@ -56,6 +56,32 @@
         }
       }
     },
+    "alternativeData": {
+      "header": "Capturing Alternative Data",
+      "title": "Alternative Data for Better Financial Decision",
+      "subtitle": "Our data layer engine help financial institutions and business partners to reduce risk by providing individuals daily transactional data",
+      "capturedData": "Captured Data",
+      "point1": {
+        "header": "Banking",
+        "content": "Balance, Income, Transaction Detail, Transfer List, Credit Card Information"
+      },
+      "point2": {
+        "header": "Riding",
+        "content": "Balance, Income, Transaction Detail, Transfer List, Credit Card Information"
+      },
+      "point3": {
+        "header": "Shopping",
+        "content": "Balance, Income, Transaction Detail, Transfer List, Credit Card Information"
+      },
+      "point4": {
+        "header": "Traveling",
+        "content": "Balance, Income, Transaction Detail, Transfer List, Credit Card Information"
+      },
+      "point5": {
+        "header": "Lending",
+        "content": "Balance, Income, Transaction Detail, Transfer List, Credit Card Information"
+      }
+    },
     "contactUs": {
       "intro": "Customer? Press? Partner?",
       "title": "We’d Love to Hear from You!",
