--- a/src/data/lang/en.json
+++ b/src/data/lang/en.json
@@ -82,7 +82,7 @@
         "content": "Balance, Income, Transaction Detail, Transfer List, Credit Card Information"
       },
       "point5": {
-        "header": "Lending",
+        "header": "Many More...",
         "content": "Balance, Income, Transaction Detail, Transfer List, Credit Card Information"
       }
     },
