--- a/src/data/lang/id.json
+++ b/src/data/lang/id.json
@@ -32,7 +32,7 @@
       }
     },
     "aboutUs": {
-      "intro": "How Acura Labs Works",
+      "intro": "Digitizing Application Process",
       "title": "We Work with User Privacy in Mind",
       "subtitle": "We respect the privacy by having one time only access after the user gave their consent and not storing their password.",
       "point1": {
