--- a/src/data/lang/en.json
+++ b/src/data/lang/en.json
@@ -14,21 +14,26 @@
       "whoWeAre": "Who We Are?",
       "whatWeDo": "What We Do?"
     },
-    "paas": "Profiling as a Service",
-    "transform": "Transforming Underwriting Process with Big Data and A.I.",
-    "desc": "Acura Labs helps financial institutions by providing reliable information for better financial decisions",
-    "navbar1": "Who We Are?",
-    "navbar2": "What We Do?",
+    "paas": "Profiling & Credit Scoring as a Service",
+    "transform": "Transforming Underwriting Process with Big Data and Artificial Intelligence",
+    "desc": "Acura Labs helps financial institutions by providing access \nto alternative data for better financial decisions",
+    "navbar0": "Home",
+    "navbar1": "About Us",
+    "navbar2": "Our Services",
     "whoWeAre": {
       "header": "Acura Labs Mission",
       "content": ["We’ve always been", "on a mission to expand", "financial inclusion", "in Indonesia"],
       "point1": {
         "header": "Alternative Data",
-        "content": "Low penetration of bank financial product is caused by the lack of data coverage, and we are here to start increasing it."
+        "content": "Low penetration of financial products are caused by the lack of data coverage, and we are here to help."
       },
       "point2": {
         "header": "Automated Process",
-        "content": "Empowering bank in having automated know-your-customer and application process."
+        "content": "Empowering financial institutions\n to shorten approval time."
+      },
+      "point3": {
+        "header": "Credit Scoring",
+        "content": "Leveraging credit history and alternative data in an easy-to-use scoring system."
       }
     },
     "aboutUs": {
@@ -49,21 +54,21 @@
       },
       "whatWeDo": {
         "header": "Acura Labs Services",
-        "subtitle": ["Secure, Reliable, and Cheap", "Credit Risk Management for Companies"],
+        "subtitle": ["Secure and Reliable Credit Risk", "Management for Financial Institutions"],
         "point1": {
-          "header": "Capturing Alternative Data",
-          "content": "We capture alternative data and used machine learning to reach the underserved market."
+          "header": "Profiling Services",
+          "content": "Providing access to alternative data and using machine learning algorithm to reach the underserved market."
         },
         "point2": {
-          "header": "Digitizing KYC & \nApplication Process",
-          "content": "We automate the verification of personal information, address, and income."
+          "header": "Credit Score Development",
+          "content": "Developing credit scoring system with a strong foundation of credit history and alternative data to better measure the risks of your customers."
         }
       }
     },
     "alternativeData": {
       "header": "Capturing Alternative Data",
       "title": "Alternative Data for Better Financial Decision",
-      "subtitle": "Our data layer engine help financial institutions and business partners to reduce risk by providing individuals daily transactional data",
+      "subtitle": "Our data layer engine helps financial institutions and business partners to leverage alternative data, with the user’s consent, for making credit decisions",
       "capturedData": "Captured Data",
       "point1": {
         "header": "Banking",
@@ -87,7 +92,7 @@
       }
     },
     "contactUs": {
-      "intro": "Customer? Press? Partner?",
+      "intro": "Contact Us",
       "title": "We’d Love to Hear from You!",
       "name": "Your Name",
       "email": "Your Email",
@@ -96,6 +101,6 @@
     }
   },
   "footer": {
-    "copyright": "Monitored regularly by Otoritas Jasa Keuangan"
+    "copyright": "ⓒ 2019. Recorded in Otoritas Jasa Keuangan with registration number\nS-84/MS.72/2019 under POJK 13/2018."
   }
 }
